# Vireon-Monument

./: CITATION.cff  CONTRIBUTING.md  MONUMENT.md  MONUMENT_MANIFEST.json  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  monument-ci.yml  no_placeholders.yml  update-manifest.yml  verify_manifest.yml
BINDINGS/: rl_certification_v1.md
ENGINES/: ENGINE.md
FOUNDATIONS/: kernel_v1.md
PROOFPACK/: .gitkeep  MANIFEST.json
PROOFPACKS/: .gitkeep
PROOFPACKS/PP001_KERNEL_ALPHA/: MANIFEST.json  SCOPE.json
PROOFPACKS/PP001_KERNEL_ALPHA/PROOFPACKS/PP001_KERNEL_ALPHA/: README.md
PROTOCOLS/: proofpack_standard_v1.md  proofpack_standard_v1_ALPHA.md
THEOREMS/: ENTRY_CHECKLIST.md  INDEX.md  README.md  T01_DEScent_Kernel.md
THEOREMS/000_TEMPLATE_MONUMENT_ENTRY/: PROOF.md  README.md  REFERENCES.md  THEOREM.md
THEOREMS/001_FOLDING_DESCENT_KERNEL/: ENTRY.json  README.md
THEOREMS/002-expected-stochastic-descent/: README.md
THEOREMS/003-anytime-valid-pac-gate/: README.md
THEOREMS/004-derivation-integrity-replay/: README.md
THEOREMS/006-chained-ledger-integrity/: README.md
THEOREMS/00_PROOFPACK_INTEGRITY/: README.md
THEOREMS/THEOREMS/005-pac-certified-policy-improvement/: README.md
tools/: check_no_placeholders.py  check_theorem_format.py  make_manifest.py  verify_manifest.py
